<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/account_bg"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/accnameinput"
        android:layout_width="300sp"
        android:layout_height="40sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:hint="@string/accname"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/emailinput"
        android:layout_width="300sp"
        android:layout_height="40sp"
        android:layout_below="@id/accnameinput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" >
    </EditText>

    <EditText
        android:id="@+id/pwinput"
        android:layout_width="300sp"
        android:layout_height="40sp"
        android:layout_below="@id/emailinput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/cfpwinput"
        android:layout_width="300sp"
        android:layout_height="40sp"
        android:layout_alignLeft="@+id/pwinput"
        android:layout_below="@id/pwinput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/cfpassword"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/ageinput"
        android:layout_width="100sp"
        android:layout_height="40sp"
        android:layout_alignLeft="@+id/pwinput"
        android:layout_below="@id/cfpwinput"
        android:layout_marginTop="10dp"
        android:hint="@string/age"
        android:inputType="number" />

    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cfpwinput"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="6dp"
        android:layout_toRightOf="@+id/ageinput"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/male"
            android:text="@string/male"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioButton
            android:id="@+id/female"
            android:text="@string/female"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RadioGroup>

    <TextView
        android:id="@+id/ethnicity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pwinput"
        android:layout_below="@+id/gender"
        android:text="@string/ethnicity"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/ethnicityspinner"
        android:layout_width="300sp"
        android:layout_height="36sp"
        android:layout_alignLeft="@+id/pwinput"
        android:layout_below="@+id/ethnicity"
        android:drawSelectorOnTop="true" />

    <Button
        android:id="@+id/buttonCreate"
        style="@style/buttontext"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ethnicityspinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/buttonselector"
        android:text="@string/create" />

</RelativeLayout>