<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/relativeLayout1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:background="@drawable/login_bg">

    <EditText
        android:id="@+id/emailinput"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="192dp"
        android:inputType="textEmailAddress" 
        android:hint="@string/email">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/pwinput"
        android:layout_below="@id/emailinput"
        android:layout_marginTop="20dp"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword" 
        android:hint="@string/password"/>

    <Button android:id="@+id/buttonlogin"
            android:layout_below="@id/pwinput"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_width="300sp"
            android:text="@string/login"
            android:background="@drawable/buttonselector"
            style="@style/buttontext"/>
    <Button android:id="@+id/buttonsignup"
            android:layout_below="@id/buttonlogin"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_width="300sp"
            android:text="@string/newacc"
            android:background="@drawable/buttonselector"
            style="@style/buttontext"/>
</RelativeLayout>

