<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <com.google.android.maps.MapView
        android:id="@+id/myMap"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:apiKey="@string/steve_key"
        android:clickable="true" />

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/top_bar"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/header"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:scrollX="1dp"
            android:singleLine="true"
            android:text="@string/goal_header"
            android:textColor="#00aeff"
            android:textSize="20dp" />
    </LinearLayout>

    <SlidingDrawer
        android:id="@+id/slidingdrawer"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:content="@+id/content"
        android:handle="@+id/handle"
        android:orientation="horizontal"
        android:visibility="invisible" >

        <Button
            android:id="@+id/handle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" />

        <ListView
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </SlidingDrawer>

    <Button
        android:id="@+id/trigge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/headerLayout"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/trigger" />

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/bottom_bar" >

        <TextView
            android:id="@+id/scoreBoard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="50"
            android:paddingLeft="20dp"
            android:text="@string/score_board"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#00aeff"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/distanceBoard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="50"
            android:paddingLeft="20dp"
            android:text="@string/level_board"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#00aeff"
            android:textSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/messageLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="136dp"
        android:background="#123567"
        android:orientation="vertical"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/goalTitile"
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_weight="5.74"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:id="@+id/buttonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/checkin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_checkin" />

            <Button
                android:id="@+id/cancelCheckin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_cancel" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>